<resources>
    <string name="app_name">Servicios tecnicos</string>
    <string name="servicios_tecnicos">Servicios Técnicos</string>
    <string name="agregar_servicio">Agregar servicio</string>
    <string name="add_service">Agregar Servicio</string>
    <string name="edit_service">Editar Servicio</string>
    <string name="delete_service">Eliminar Servicio</string>
    <string name="view_service">Consultar Servicio</string>
    <string name="descripcion">Descripción</string>
    <string name="ingresa_la_descripcion">Ingresa la descripción</string>
    <string name="monto_del_servicio">Monto del Servicio</string>
    <string name="monto">Monto</string>
    <string name="fecha_del_servicio">Fecha del Servicio</string>
    <string name="selecciona_la_fecha">Selecciona la fecha</string>
    <string name="hora_del_servicio">Hora del Servicio</string>
    <string name="selecciona_la_hora">Selecciona la hora</string>
    <string name="cliente">Cliente</string>
    <string name="comentarios">Comentarios</string>
    <string name="estado_del_servicio">Estado del Servicio</string>
    <string name="pendiente">Pendiente</string>
    <string name="terminado">Terminado</string>
    <string name="pagado">Pagado</string>
    <string name="guardar_servicio">Guardar Servicio</string>
    <string name="icono_agregar_servicio">Icono agregar servicio</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_servicio">Editar Servicio</string>
    <string name="icono_editar_servicio">Icono editar servicio</string>
    <string name="selecciona_servicio">Selecciona un servicio</string>
    <string name="icono_eliminar_servicio">Icono Eliminar Servicio</string>
    <string name="eliminar_servicio">Eliminar Servicio</string>
    <string name="lista_de_servicios">Lista de Servicios</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ayuda">Ayuda</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="notificaciones_on">Notificaciones: ON</string>
    <string name="notificaciones_off">Notificaciones: OFF</string>
    <string name="abrir_menu">Abrir Menú</string>
    <string name="espa_ol">Español</string>
    <string name="ingl_s">Inglés</string>
    <string name="franc_s">Francés</string>
    <string name="tama_o_de_fuente">Tamaño de fuente</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>